# sciencetldr

./: .gitignore  README.md  SETUP.md  WeeklyLietatureReviewPrompt.txt  channel.json  feed.xml  index.html  pyproject.toml
digest/: 2026-04-20.md  2026-04-27.md  2026-05-04.md
episodes/: 001-sequence-clustering-confounds-alphafold2.json  002-immunoinformatics-approach-to-design-a-chimeric-cd70-peptide.json  003-neutrophil-profiling-illuminates-anti-tumor-antigen.json  004-itpripl1-binds-cd3e-to-impede-t-cell-activation-and-enable.json  005-circadian-tumor-infiltration-and-function-of-cd8-t-cells.json  006-osr2-functions-as-a-biomechanical-checkpoint-to-aggravate.json  007-in-vivo-dendritic-cell-reprogramming-for-cancer.json  008-the-hallmarks-of-cancer-immune-evasion.json  009-engineered-allogeneic-t-cells-decoupling-t-cell-receptor-and.json  010-probiotic-neoantigen-delivery-vectors-for-precision-cancer.json  011-decomposing-causality-into-its-synergistic-unique-and.json  012-coordinated-inheritance-of-extrachromosomal-dnas-in-cancer.json  013-a-mechanism-for-hypoxia-induced-inflammatory-cell-death-in.json  014-autonomous-mobile-robots-for-exploratory-synthetic-chemistry.json  015-recombinant-venom-proteins-in-insect-seminal-fluid-reduce.json  016-system-vaccinology-analysis-of-predictors-and-mechanisms-of.json  017-learning-the-language-of-antibody-hypervariability.json  018-discovery-of-a-new-class-of-cell-penetrating-peptides-by.json  019-accelerated-enzyme-engineering-by-machine-learning-guided.json  020-prior-vaccination-prevents-overactivation-of-innate-immune.json  (+50 more)
(+18 files in other folders)
